Replace zabbix_agent2.conf with an ansible template.

--- a/tests/test.yml
+++ b/tests/test.yml
@@ -3,6 +3,7 @@
 - name: CI Tests
   hosts: all
   vars:
+    dbs_hostname: 'vagrant-box.leandroramos.me'
     dbs_groups:
       - name: 'admins'
       - name: 'docker'
