--- a/tasks/system.yml
+++ b/tasks/system.yml
@@ -47,9 +47,9 @@
     owner: root
     group: vnstat
 
-- name: COPY | Configure zabbix-agent2
-  ansible.builtin.copy:
-    src: etc/zabbix/zabbix_agent2.conf
+- name: TEMPLATE | Configure zabbix_agent2
+  ansible.builtin.template:
+    src: etc/zabbix/zabbix_agent2.conf.j2
     dest: /etc/zabbix/zabbix_agent2.conf
     mode: 0644
     owner: root
