--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,10 +1,7 @@
 ---
-
 dbs_packages:
   - apt-listbugs
   - apt-transport-https
-  - aria2
-  - asciinema
   - bash-completion
   - bridge-utils
   - build-essential
@@ -13,62 +10,30 @@ dbs_packages:
   - cbm
   - curl
   - dnsutils
-  - duc
   - ethtool
   - fakeroot
-  - file
   - git
   - git-lfs
   - gnupg
   - gnupg-agent
   - gnupg2
-  - golang
   - hdparm
   - htop
   - iotop
   - iperf
   - iptraf-ng
-  - libbz2-dev
-  - libffi-dev
-  - liblzma-dev
-  - libncurses5-dev
-  - libncursesw5-dev
-  - libpq-dev
-  - libreadline-dev
-  - libsqlite3-dev
-  - libssl-dev
-  - linux-cpupower
-  - linux-image-amd64
-  - lsb-release
   - lshw
-  - lsof
   - lynx
-  - make
-  - mtr
   - ncdu
-  - ndppd
   - nmap
   - nmon
-  - ntpdate
-  - nvme-cli
   - p7zip
-  - parted
-  - postgresql-client
-  - psmisc
-  - python3-dev
-  - python3-pip
-  - python3-setuptools
   - rsync
   - rsyslog
-  - software-properties-common
-  - sqlite3
   - sudo
   - tcptraceroute
   - telnet
-  - time
-  - tmux
   - tree
-  - tsocks
   - unar
   - unzip
   - vim-nox
@@ -77,11 +42,8 @@ dbs_packages:
   - wget
   - whois
   - xz-utils
-  - zabbix-agent2
   - zip
-  - zlib1g-dev
 
-dbs_backports_packages:
-  - zabbix-agent2
+dbs_backports_packages: []
 
 dbs_distro_packages: []
