--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,4 @@
 ---
-
 # -------------------------
 # APT configuration
 # -------------------------
@@ -11,12 +10,12 @@ dbs_repo_old: "{% if ansible_local | d() and ansible_local.apt_sources | d() and
 # -------------------------
 # System configuration
 # -------------------------
-dbs_hostname: 'localhost'
+dbs_hostname: "localhost"
 dbs_hostname_use_strategy: null
 dbs_locales:
-  - 'en_US.UTF-8'
-dbs_default_locale: 'en_US.UTF-8'
-dbs_timezone: 'Etc/UTC'
+  - "en_US.UTF-8"
+dbs_default_locale: "en_US.UTF-8"
+dbs_timezone: "Etc/UTC"
 dbs_use_dotfiles: true
 dbs_uninstall_packages: []
 
@@ -32,15 +31,14 @@ dbs_set_apt: true
 # -------------------------
 # Alternatives
 # -------------------------
-dbs_alternative_editor: '/usr/bin/vim.nox'
-dbs_alternative_awk: '/usr/bin/gawk'
+dbs_alternative_editor: "/usr/bin/vim.nox"
+dbs_alternative_awk: "/usr/bin/gawk"
 
 # -------------------------
 # Services to be restarted
 # -------------------------
 dbs_restart_services:
   - ssh
-  - zabbix-agent2
   - vnstat
 
 # -------------------------
@@ -107,10 +105,10 @@ dbs_sysctl_config:
   #'net.ipv4.tcp_window_scaling': '1'
   # number of packets to keep in backlog before the kernel starts dropping them
   #'net.ipv4.tcp_max_syn_backlog': '3240000'
-  'net.ipv4.ip_forward': '1'
-  'net.ipv6.conf.all.disable_ipv6': '0'
-  'net.ipv6.conf.all.forwarding': '1'
-  'vm.swappiness': '10'
+  "net.ipv4.ip_forward": "1"
+  "net.ipv6.conf.all.disable_ipv6": "0"
+  "net.ipv6.conf.all.forwarding": "1"
+  "vm.swappiness": "10"
 
 # Internal use (DO NOT UPDATE)
 dbs_timezone_legacy_mode: false
