--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,10 +2,10 @@
 
 galaxy_info:
   role_name: debian_bootstrap
-  namespace: leandroembu
+  namespace: ecadev
   author: Leandro Ramos (forked from Emilien Mantel)
   description: Normalize and prepare a Debian server
-  company: PythonicCafe
+  company: ECA-USP
   license: GPLv2
   min_ansible_version: '2.11'
   platforms:
